Fixed: Design Main image fixed : display: block; height: 300px; overflow: hidden; Plz ignore previous commit msg.

--- a/public/assets/css/pages/home.css
+++ b/public/assets/css/pages/home.css
@@ -5,8 +5,8 @@ section#event-banner {
 
 .event-banner{
   display: block;
-  height: fit-content;
-  position: fixed;
+  height: 300px;
+  overflow: hidden;
 }
 
 .recommand h2{
